2019-04-26  Martin Mächler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.4-3

	* src/predict.c (predict_vlmc): "fix" 'q1->count' pointer


2018-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.4-2: add registration (of C code
	  called); also import everything needed (incl from std. packages).

2015-04-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.4-1

	* src/predict.c (predict_vlmc): careful for "constant data":
	alpa_len == m == 1 !


2014-10-04  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/sim.R: drop "wrong" 'n' argument; add simple class(.) and a
	print() method which mostly elides the large "seed" attribute.

	* R/vlmc.R (print.vlmc): show cutoff in any case

2012-09-11  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-13

	* src/vlmc.h (max_alpha_len): now allow alphabet length up to 95.
	* R/vlmc.R (vlmc): and catch the case when it would be longer.
	Prompted by Jesse Bridgewater's e-mail and Stackoverflow
	http://stackoverflow.com/questions/11236776/r-package-vlmc-dies-if-state-space-size-exceeds-27

2011-12-23  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Depends): R >= 2.13.0:  Want BIC() and nobs() to work.

2011-12-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* NAMESPACE: useDynLib() but also hide most S3 methods.

	* R/entropy.R (logLik.vlmc): add 'nobs' --> BIC() works as well.

	* src/io.c: use quote (') instead of backquote(`) in C output, too.

2009-12-12  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-12

	* R/vlmc.R (print.vlmc, etc): do not use `vlmc' (backquote) anymore.
	* tests/pred-vlmc.Rout.save: update consequently

2009-11-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.3-11
	* R/vlmc.R: ditto

	* man/simulate.vlmc.Rd: fix \link[]{}

2006-09-18  Martin Maechler  <maechler@stat.math.ethz.ch>
