@@ -1,15 +1,20 @@
 Package: VLMC
-Version: 1.4-3-1
-Date: 2019-04-29
-Author: Martin Maechler <maechler@stat.math.ethz.ch>
-Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
+Version: 1.4-4
+VersionNote: Released 1.4-3-1 on 2019-04-29
+Date: 2024-08-14
+Authors@R: person("Martin", "Maechler", role = c("aut", "cre"),
+		  email = "maechler@stat.math.ethz.ch", comment = c(ORCID = "0000-0002-8685-9910"))
 Title: Variable Length Markov Chains ('VLMC') Models
 Description: Functions, Classes & Methods for estimation, prediction, and
   simulation (bootstrap) of Variable Length Markov Chain ('VLMC') Models.
 Imports: stats, MASS
+Suggests: astsa
+SuggestsNote: {astsa} mentioned in docu only.
 BuildResaveData: no
 License: GPL (>= 2)
 NeedsCompilation: yes
-Packaged: 2019-04-29 07:38:17 UTC; maechler
+Packaged: 2024-08-14 07:42:48 UTC; maechler
+Author: Martin Maechler [aut, cre] (<https://orcid.org/0000-0002-8685-9910>)
+Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Repository: CRAN
-Date/Publication: 2019-04-29 21:30:11 UTC
+Date/Publication: 2024-08-19 09:50:10 UTC
