@@ -1,5 +1,5 @@
-2b6b4cf4bab810b088d73cdafb319f53 *ChangeLog
-09555d7a987339324496c85749aeae73 *DESCRIPTION
+b60428bedb9ae08c94017554ff3290b2 *ChangeLog
+cd3c0a5332d0bfb2b6f84dc6bd999f81 *DESCRIPTION
 9c0dbf47ef9097b472238a2815b51565 *NAMESPACE
 b5dc25f5ad2d8679f1e0c002de662349 *R/alphabet.R
 f98c21ef14f3f52a7c7336934ceeda7a *R/conversion.R
@@ -16,14 +16,14 @@ f0560cfe52455808bfe00b58ca5d1e5e *TODO
 e5b8d904c8dce4f52fb1a1c08bd56fea *data/OZrain.rda
 2b8cc0b34856ed5c103447e2b55186ed *data/bnrf1.R
 bfc023fa22de5e80bebbdb0d838bea20 *inst/xdata/bnrf1_both.rda
-03473acd552598d91601c4b1bfed199d *man/OZrain.Rd
+585688facc81b3dbc76403f9c2eb5eca *man/OZrain.Rd
 a2ed959c6d0d6cafec30d8a067e93c4f *man/RCplot.Rd
 4bd9522d547f2eaf87af423af80a0ce4 *man/alpha2int.Rd
 80bdbe42c74d87bb450a7124e1210039 *man/alphabet.Rd
 eafa99d575da9e171100c5df7bfcd73c *man/as.dendrogram.vlmc.Rd
-5409be92261a80c27c6e5d2b2fd94826 *man/bnrf1.Rd
+98c600446cf64b06ffe7bce268f2d952 *man/bnrf1.Rd
 9f5198d51796d6a33b33aa75f068e8c6 *man/deviance.vlmc.Rd
-7ae32ffcc036cb6a141aff7352bab67f *man/draw.vlmc.Rd
+41b544a8a0edba92ff071e9d15b9f4c2 *man/draw.vlmc.Rd
 3ec6e79a82dc907a965de5f5396a8cad *man/id2ctxt.Rd
 4a0370a62a0689005871248cda314eec *man/int2char.Rd
 fc02124bb65845bfbfe48686d59ccafe *man/logLik.Rd
@@ -39,11 +39,11 @@ dbaa7b825500d8db9bfbb1addc3b1a14 *man/summary.vlmc.Rd
 70d269b810d7fe74a242c6782ad5e514 *src/alphabet.h
 affd412ab1905ab70da8396f5dfc046e *src/cutoffs.c
 ce04c8c84a408c3c014b8f094ed94819 *src/data.c
-7e98f645692c0697b0d56ae680485f99 *src/drawvlmc.c
+dc6801204a455065aa012f1660e43651 *src/drawvlmc.c
 072203d03b98c86ed1b5ce8a57a39bca *src/entropy.c
 5c00ed1e841a6c29b81d97353700e388 *src/fitvlmc.c
 abb7ef4a60d25c76a3f5f06053e5efa6 *src/gen.c
-05a34f3d7d970a926ead9050b812fe9d *src/init.c
+f47948ee514d10fbd8ff8dbbad49bfe8 *src/init.c
 d0db2017c41db4d67888c433bec8b03d *src/init_alpha.c
 74b268bc9e32cf5b0452a43f6e0a4aea *src/io.c
 1a3c0e3193e7d4716d32d2016b704127 *src/predict.c
@@ -51,8 +51,8 @@ d57d30a207e598e99d6916d6ec32e4cd *src/prune.c
 43682e84bf41abb39ab40ffcd2c30ed5 *src/saveload.c
 7506cca9d7d2c466ad2f539202c101d4 *src/sim.c
 7565dafec2040e5436a8f18dfd4db2aa *src/subutil.h
-c58a5ecf5049a1421533dffb3b856688 *src/util.c
-38a4dbe8d529fc3bb968b330069557ec *src/vlmc.h
+bc3833dad27a9283915244350099d757 *src/util.c
+747a0d711f1da331de6a825295749988 *src/vlmc.h
 acd437e0612fd8eeabe866aab4c1e892 *src/vlmc_R_pkg.h
 2c03a915009c9b8f36e7829ad4c943e6 *src/vlmc_gen.h
 b1c7623595d1b92d4beaceb812af08d1 *src/vlmc_io.h
