@@ -1,4 +1,4 @@
-/* -- $Id: drawvlmc.c,v 1.12 2018/10/02 16:37:37 maechler Exp $
+/* -- $Id: drawvlmc.c,v 1.13 2019/04/29 07:40:13 maechler Exp $
  * -- draw_sub.v --- Subroutine instead of main program
  * -- was ../../draw.c,v 1.9 2000/03/17 17:13:12 maechler
 */
