@@ -1,4 +1,14 @@
-2019-04-26  Martin Mächler  <maechler@stat.math.ethz.ch>
+2024-08-14  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* src/util.c: s /Free()/R_Free()/ etc -- i.e. using STRICT_R_HEADERS
+
+2024-08-09  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* DESCRIPTION (Version): 1.4-4 ; use `Authors@R`
+
+	* man/*.Rd: fix some URLs; mention data from {astsa}
+
+2019-04-26  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* DESCRIPTION (Version): 1.4-3
 
